added start button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div><button id="random">play a random web radio station</button></div> -->
         <hr>
         
+        <div><button id="start">search for ghosts</button></div>
 
         <div class="footer">
             <hr>
