fixed version with start button

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         
         <script src="main.js"></script> <!-- my code -->
         <script> // this code stolen, doesn't work when I delete it
-            webradio.player(1).addEventListener("volumechange", function (){
-                webradio.set_value("playervolume", webradio.player(1).volume);
-            }, false);
-            webradio.player(1).volume = webradio.get_value("playervolume");
+            // webradio.player(1).addEventListener("volumechange", function (){
+            //     webradio.set_value("playervolume", webradio.player(1).volume);
+            // }, false);
+            // webradio.player(1).volume = webradio.get_value("playervolume");
         </script>
         <script src="sequence.js"></script>
 
