made some fixes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="footer">
             <hr>
-            <p>supersonique!</p>
+            <p id="supersonique">supersonique!</p>
         </div>
         
         <script src="main.js"></script> <!-- my code -->
